Shop: Button centered alignment issues has beed resolved

--- a/wp-content/themes/delivering-happiness/assets/sass/global/_shop.scss
+++ b/wp-content/themes/delivering-happiness/assets/sass/global/_shop.scss
@@ -26,7 +26,7 @@
             background-color: rgba($White, 0.6);
             color: $Green;
             padding: 19px 32px;
-            margin-left: 109px;
+            margin-left: 128px;
             &:hover {
                 background-color: rgba($White, 0.8);
             }
